--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+#spring.data.mongodb.uri= mongodb://localhost:27017/chat-app-backend
+# Server properties
+server.port=8080
+
+# Data source configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/chat_database?useSSL=false&serverTimezone=UTC
+spring.datasource.username=your_db_username
+spring.datasource.password=your_db_password
+
+# Hibernate and JPA properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+
+# JWT properties
+jwt.secret=your_jwt_secret
+jwt.expirationMs=86400000 # 1 day in milliseconds
+
+# Spring Security properties
+spring.security.user.name=admin
+spring.security.user.password=admin_password
 
