--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,10 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>2.5.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
