--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,9 @@ jwt.expirationMs=86400000 # 1 day in milliseconds
 spring.security.user.name=admin
 spring.security.user.password=admin_password
 
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.deserialization.adjust-dates-to-context-time-zone=false
+
+logging.file.path=/var/log
+
+logging.file.name=myapp.log
