--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.ddl-auto=update
 
 # JWT properties
-jwt.secret=your_jwt_secret
+jwt.secret=phygital
 jwt.expirationMs=86400000 # 1 day in milliseconds
 
 # Spring Security properties
@@ -24,3 +24,5 @@ spring.jackson.deserialization.adjust-dates-to-context-time-zone=false
 logging.file.path=/var/log
 
 logging.file.name=myapp.log
+
+spring.data.jpa.repositories.bootstrap-mode=default
