--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 # Server properties
 server.port=8080
 
-# Data source configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/chat_database?useSSL=false&serverTimezone=UTC
-spring.datasource.username=your_db_username
-spring.datasource.password=your_db_password
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/nombre_de_la_base_de_datos
+spring.datasource.username=nombre_del_usuario
+spring.datasource.password=contraseña_del_usuario
+spring.jpa.show-sql=true
+
+
+
 
 # Hibernate and JPA properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # JWT properties
