--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,15 @@
 # Server properties
-# server.port=8080
-server.port=8081
+server.port=8080
 
-
+# Database properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/chat
 spring.datasource.username=postgress
 spring.datasource.password=postgress
-spring.jpa.show-sql=true
-
-
-
 
 # Hibernate and JPA properties
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT properties
 jwt.secret=phygital
@@ -24,20 +19,16 @@ jwt.expirationMs=86400000
 spring.security.user.name=admin
 spring.security.user.password=admin_password
 
-spring.jackson.serialization.write-dates-as-timestamps=false
-spring.jackson.deserialization.adjust-dates-to-context-time-zone=false
-
+# Logging properties
 logging.file.path=/var/log
-
 logging.file.name=myapp.log
-
-spring.data.jpa.repositories.bootstrap-mode=default
-
-management.endpoints.web.exposure.include=*
-
 logging.level.root=debug
 
+# Spring Data JPA properties
+spring.data.jpa.repositories.bootstrap-mode=default
+
+# Management endpoints properties
+management.endpoints.web.exposure.include=*
+
+# Servlet properties
 server.servlet.context-path=/
-
-
-
