--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 server.port=8080
 
 # Database properties
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/chat
-spring.datasource.username=postgress
+spring.datasource.username=postgres
 spring.datasource.password=postgress
 
 # Hibernate and JPA properties
